# test-diplmoa

./: .gitignore  README.md  app.py  config.py  datasets.py  demo.py  environment.yml  pyproject.toml  test.py  test_invert.py  util.py  viz.py
docs/: ALGORITHMIC_CHANGES_FROM_ORIGINAL.md  ANALYSIS_INTERPRETATION.md  ARCHITECTURE.md  DIPLOMA_DEFENSE_GUIDE.md  DIPLOMA_SECTION_4_METHOD_UI.md  INTERFACE_GUIDE.md  METRICS_REFERENCE.md  PAPER_METRICS_AND_COMPARISON.md  PAYLOAD_DOCUMENT_ID_BENCHMARK_DEEP_DIVE.md  PIPELINE_METRICS_HEATMAP_DEEP_DIVE.md  REQUIREMENTS_ATTACKS_METRICS_METHODS.md  USER_GUIDE.md
omniguard/: __init__.py  attacks.py  basic_watermarking.py  benchmark.py  cli.py  dataset_generation.py  editing.py  image_ops.py  legacy_models.py  metrics.py  paper_comparison.py  payload.py  requirement_experiments.py  schemas.py  service.py  settings.py  ui.py
tests/: test_editing.py  test_engine_smoke.py  test_image_ops.py  test_metrics.py  test_payload.py  test_requirement_methods.py
